syntax = "proto3";
option java_multiple_files = true;
package tictactoe;

message LogoutRequest {}

message LogoutResponse {}

service AuthTokenService {
  rpc logout(LogoutRequest) returns (LogoutResponse);
}
